Fixed image size to 125px for a consistent vertical text alignment

--- a/style.css
+++ b/style.css
@@ -65,3 +65,7 @@ button {
     justify-content: center;
     text-align: center;
 }
+
+img {
+    height: 125px;
+}
